--- a/split-music/package.json
+++ b/split-music/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.1",
+    "react-burger-menu": "^2.6.3",
     "react-dom": "^16.8.1",
+    "react-navigation": "^3.3.0",
+    "react-player": "^1.9.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
